--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-time-machine
+title: CaptainHaywood's Homepage
+description: Your one-stop shop for all of my repos, projects and more!
