--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-midnight
 title: CaptainHaywood's Homepage
 description: Your one-stop shop for all of my repos, projects and more!
